# financial-terminal

./: Cargo.toml
src/: data.rs  main.rs
