[package]
name = "stock-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = { version = "0.30.0", features = ["crossterm"] }
crossterm = "0.27"
color-eyre = "0.6.5"
